Use getFirst on Map.